cabal-version: 2.2
name:          unsatisfiable-examples
version:       0
synopsis:      Unsatisfiable: examples
description:   Unsatisfiable: examples.
license:       BSD-3-Clause
license-file:  LICENSE
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
category:      Plugin
tested-with:   GHC ==9.0.1

executable example1
  default-language: Haskell2010
  hs-source-dirs:   examples
  ghc-options:      -Wall
  main-is:          example1.hs
  build-depends:
    , base
    , unsatisfiable

executable example2
  default-language: Haskell2010
  hs-source-dirs:   examples
  ghc-options:      -Wall
  main-is:          example2.hs
  build-depends:
    , base
    , unsatisfiable

executable example3
  default-language: Haskell2010
  hs-source-dirs:   examples
  ghc-options:      -Wall
  main-is:          example3.hs
  build-depends:
    , base
    , unsatisfiable

executable example4
  default-language: Haskell2010
  hs-source-dirs:   examples
  ghc-options:      -Wall
  main-is:          example4.hs
  build-depends:
    , base
    , unsatisfiable

executable example5
  default-language: Haskell2010
  hs-source-dirs:   examples
  ghc-options:      -Wall
  main-is:          example5.hs
  build-depends:
    , base
    , constraints    ^>=0.13
    , unsatisfiable
